--- a/src/app/components/desktopevent/desktopevent.component.html
+++ b/src/app/components/desktopevent/desktopevent.component.html
@@ -1,4 +1,7 @@
 <div *ngFor='let event of timeTable' class="pagina">
+
+  <app-header back="true" title="{{event['name']}}"></app-header>
+
     <div class="red-square">
       <img [src]="event['icon']" [alt]="event['name']" id='eventIcon'>
     </div>
@@ -7,5 +10,5 @@
       <p>{{event['desc']}}</p>
       <h2 class="subtititle">credits to:</h2>
     </div>
-    <p id="time" class="subtititle">{{service.displayTime(event['time'])}}</p>
+    <p id="time" class="subtititle">{{displayTime(event['time'])}}</p>
   </div>
