--- a/src/app/components/network/chat/chat.component.html
+++ b/src/app/components/network/chat/chat.component.html
@@ -3,8 +3,8 @@
 <ng-container *ngIf="chat$ | async as chat">
   <ng-container *ngIf=" auth.user$ | async as user">
 
-    <app-header class="red" back='true' *ngIf="chat.uid != user.uid" title="{{chat.uid}}"></app-header>
-    <app-header class="red" back='true' *ngIf="chat.uid2 != user.uid" title="{{chat.uid2}}"></app-header>
+    <app-header class="red" back='true' *ngIf="chat.uid != user.uid" title="{{user1}}"></app-header>
+    <app-header class="red" back='true' *ngIf="chat.uid2 != user.uid" title="{{user2}}"></app-header>
 
     <!-- <div class="top">
       <p><a class="tag" routerLink="/network">Back</a></p>
