--- a/src/app/components/livestream/livechat/livechat.component.scss
+++ b/src/app/components/livestream/livechat/livechat.component.scss
@@ -1,17 +1,23 @@
-
+.container::-webkit-scrollbar{
+  display:none;
+}
 .container{
-  height: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
-  align-items: flex-end;
-  max-height: 55vh;
-  overflow-y: scroll;
+  align-content: stretch;
   overflow-x: hidden;
   position: relative;
+  // align-items: stretch;
   .messages{
-    margin-bottom: 4em;
-width: 100%;
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    flex-grow: 2;
+  }
+  .messages::-webkit-scrollbar{
+    display: none;
   }
   .userinput{
     //position: absolute;
@@ -22,10 +28,7 @@ width: 100%;
     align-items: center;
     height: 10%;
     //width: 90%;
-    position: absolute;
     bottom: 0;
-    width: 90%;
-    padding: 1em 0;
     background: white;
     .send,.clap{
        display: flex;
@@ -51,6 +54,18 @@ width: 100%;
   }
 }
 
+.text-msg, .clap-msg{
+  width: 100%;
+  margin-bottom: 0.5em;
+  text-align: left;
+}
+
+.msg-user{
+  font-weight: normal;
+  padding-right: 0.5em;
+}
+
+//mobile
 @media only screen and (max-width: 768px) {
   .container{
     max-height: 50vh;
@@ -60,8 +75,22 @@ width: 100%;
     position: absolute;
     bottom: 0;
     width: 90%;
-
+    padding: 1em 0;
+  }
+  .messages{
+    margin-bottom: 4em;
   }
 }
 
+//desktop
+@media only screen and (min-width: 768px) {
+  .container{
+    max-height: 60vh;
+    position: static;
+  }
+  .userinput{
+    width: 100%;
+    padding-top: 1em;
+  }
+}
 
