--- a/src/app/components/livestream/livestream/livestream.component.html
+++ b/src/app/components/livestream/livestream/livestream.component.html
@@ -33,9 +33,9 @@
 <div class="notifications">
 
 
-<!-- <div *ngFor="let notification of liveStreamNotifications">
-<app-notification  [notif]=notification></app-notification>
-</div> -->
+
+<app-notification  [notif]=room></app-notification>
+
 
 </div>
 
