--- a/src/app/components/notification/notification.component.html
+++ b/src/app/components/notification/notification.component.html
@@ -1,6 +1,38 @@
-<div *ngIf="notif !== undefined || notif !== ''">
-<p class='{{notif.color}}'>{{notif.message}}</p>
-<p *ngIf="notif.permanent === true"  class='{{notif.color}} permanent'>{{notif.message}}Permanent</p>
-</div>
+<section *ngIf="liveStreamNotifications.length !== 0 " class="notification">
+    <div *ngFor="let notification of liveStreamNotifications" >
+        <div *ngIf="notification !== undefined || notification !== ''"  [hidden] = '!notification.show'  >
+            <p class='{{ notification.color }} '>{{ notification.message }}</p>
+            <p *ngIf="notification.permanent === true" class='{{ notification.color }} permanent notification'>{{ notification.message }}Permanent</p>
+        </div>
+    </div>
+</section>
 
 
+
+<section *ngIf="chatroomNotifications.length !== 0" class="notification">
+    <div *ngFor="let notification of chatroomNotifications" >
+        <div *ngIf="notification !== undefined || notification !== ''" [hidden]='!notification.show'>
+            <p  *ngIf="notification.permanent === false" class='{{ notification.color }} '>{{ notification.message }}</p>
+            <p *ngIf="notification.permanent === true" class='{{ notification.color }} permanent notification'>{{ notification.message }}Permanent</p>
+        </div>
+    </div>
+</section>
+
+
+<section *ngIf="expoNotifications.length !== 0" class="notification">
+    <div *ngFor="let notification of expoNotifications" >
+        <div *ngIf="notification !== undefined || notification !== ''"   [hidden] = '!notification.show' >
+            <p class='{{ notification.color }} '>{{ notification.message }}</p>
+            <p *ngIf="notification.permanent === true" class='{{ notification.color }} permanent notification'>{{ notification.message }}Permanent</p>
+        </div>
+    </div>
+</section>
+
+<section *ngIf="faqNotifications.length !== 0" class="notification">
+    <div *ngFor="let notification of faqNotifications">
+        <div *ngIf="notification !== undefined || notification !== ''" [hidden] = '!notification.show' >
+            <p class='{{ notification.color }} '>{{ notification.message }}</p>
+            <p *ngIf="notification.permanent === true" class='{{ notification.color }} permanent notification'>{{ notification.message }}Permanent</p>
+        </div>
+    </div>
+</section>
