--- a/src/app/components/desktopevent/desktopevent.component.scss
+++ b/src/app/components/desktopevent/desktopevent.component.scss
@@ -1,6 +1,6 @@
 @import '~src/styles.scss';
 
-.event{
+.desktop-event{
     width: 100%;
     height: 100%;
 }
@@ -15,6 +15,10 @@
     img{
         max-height: 80%;
     }
+}
+
+.hidden{
+    display: none;
 }
 
 .tekst-event{
