--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -43,11 +43,11 @@
     }
 
   }
-  app-inbox{
-    position: absolute;
-    top: 60px;
-    right: 0;
-  }
+  // app-inbox{
+  //   position: absolute;
+  //   top: 60px;
+  //   right: 0;
+  // }
 
   .profile {
     margin-left: 1em;
