--- a/src/app/components/inbox/inbox.component.html
+++ b/src/app/components/inbox/inbox.component.html
@@ -1,8 +1,7 @@
 <ng-container *ngIf="auth.user$ | async as user">
-
 <div class="inbox-container">
   <div class="conversations" *ngFor="let chats of myChats" (click)='goToChat(chats)'>
-    <div *ngIf="chats.messages.length" class="flex row conversation">
+    <div *ngIf="chats.messages.length" class="conversation">
       <img [src]="'assets/man.svg'" alt="">
       <div class="namestatus">
         <p>{{ chats.displayName }}</p>
