--- a/src/app/components/timetable/timetable.component.scss
+++ b/src/app/components/timetable/timetable.component.scss
@@ -24,7 +24,7 @@ ul{
         .red-arrow{
             width: 10%;
             height: 100%;
-            background-color: $red;
+            background-color: $blue;
             display: flex;
             align-items: center;
             img{
