--- a/src/app/components/notification/notification.component.html
+++ b/src/app/components/notification/notification.component.html
@@ -1,8 +1,8 @@
 <section *ngIf="liveStreamNotifications.length !== 0 " class="notification">
     <div *ngFor="let notification of liveStreamNotifications" >
-        <div *ngIf="notification !== undefined || notification !== ''"  [hidden] = '!notification.show'  >
-            <p class='{{ notification.color }} '>{{ notification.message }}</p>
-            <p *ngIf="notification.permanent === true" class='{{ notification.color }} permanent notification'>{{ notification.message }}Permanent</p>
+        <div *ngIf="notification !== undefined || notification !== ''"   >
+            <p class='{{ notification.color }} ' [hidden] = '!notification.show' >{{ notification.message }}</p>
+
         </div>
     </div>
 </section>
@@ -11,9 +11,9 @@
 
 <section *ngIf="chatroomNotifications.length !== 0" class="notification">
     <div *ngFor="let notification of chatroomNotifications" >
-        <div *ngIf="notification !== undefined || notification !== ''" [hidden]='!notification.show'>
-            <p  *ngIf="notification.permanent === false" class='{{ notification.color }} '>{{ notification.message }}</p>
-            <p *ngIf="notification.permanent === true" class='{{ notification.color }} permanent notification'>{{ notification.message }}Permanent</p>
+        <div *ngIf="notification !== undefined || notification !== ''" >
+            <p  *ngIf="notification.permanent === false" class='{{ notification.color }} ' [hidden]='!notification.show'>{{ notification.message }}</p>
+
         </div>
     </div>
 </section>
@@ -21,18 +21,18 @@
 
 <section *ngIf="expoNotifications.length !== 0" class="notification">
     <div *ngFor="let notification of expoNotifications" >
-        <div *ngIf="notification !== undefined || notification !== ''"   [hidden] = '!notification.show' >
-            <p class='{{ notification.color }} '>{{ notification.message }}</p>
-            <p *ngIf="notification.permanent === true" class='{{ notification.color }} permanent notification'>{{ notification.message }}Permanent</p>
+        <div *ngIf="notification !== undefined || notification !== ''"   >
+            <p class='{{ notification.color }} ' [hidden] = '!notification.show' >{{ notification.message }}</p>
+
         </div>
     </div>
 </section>
 
 <section *ngIf="faqNotifications.length !== 0" class="notification">
     <div *ngFor="let notification of faqNotifications">
-        <div *ngIf="notification !== undefined || notification !== ''" [hidden] = '!notification.show' >
-            <p class='{{ notification.color }} '>{{ notification.message }}</p>
-            <p *ngIf="notification.permanent === true" class='{{ notification.color }} permanent notification'>{{ notification.message }}Permanent</p>
+        <div *ngIf="notification !== undefined || notification !== ''" >
+            <p class='{{ notification.color }} ' [hidden] = '!notification.show' >{{ notification.message }}</p>
+
         </div>
     </div>
 </section>
