--- a/src/app/components/timetable/timetable.component.scss
+++ b/src/app/components/timetable/timetable.component.scss
@@ -1,98 +1,117 @@
 @import '~src/styles.scss';
 
-ul{
-    margin-top: 80px;
-}
-.timetable-list-item{
-    margin-bottom: 5%;
-    display: flex;
+ul {
+  margin-top: 80px;
 }
 
-.event-div{
-    box-shadow: 0px 3px 6px rgba(0,0,0,0.16);
+.timetable-list-item {
+  margin-bottom: 5%;
+  display: flex;
+}
+
+.event-div {
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+  width: 100%;
+  height: 5em;
+
+  a {
+    height: 100%;
     width: 100%;
-    height: 5em;
-    a{
-        height: 100%;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        h3{
-            margin-left: 5vw;
-        }
-        }
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    h3 {
+      margin-left: 5vw;
+    }
+  }
 }
 
 .time-text {
-    width: 20%;
-    text-align: center;
-    -webkit-transform: rotate(-90deg);
-    font-size: 20px;
-    font-weight: 700;
+  width: 20%;
+  text-align: center;
+  -webkit-transform: rotate(-90deg);
+  font-size: 20px;
+  font-weight: 700;
 }
 
 //desktop
 @media only screen and (min-width: 769px) {
-    ul{
-        grid-column: 2/ span 3;
-        grid-row: 4/ span 3;
-        margin: 0;
-        overflow-y: scroll;
-        -ms-overflow-style: none;
-        max-height: 100%;
+  .container-grid {
+    background-image: url("../../../assets/images/fablabCloseUp.png");
+    background-size: cover;
+  }
+
+  ul {
+
+    grid-column: 2/ span 3;
+    grid-row: 4/ span 3;
+    margin: 0;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    max-height: 100%;
+  }
+
+  ul::-webkit-scrollbar {
+    display: none;
+  }
+
+  .event-detail::-webkit-scrollbar {
+    display: none;
+  }
+
+  .time-text {
+    margin: 20px auto 0 auto;
+  }
+
+  .event-mobile {
+    display: none;
+  }
+
+  .event-desktop {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    h3 {
+      margin-left: 1em;
     }
-    ul::-webkit-scrollbar{
-        display:none;
-    }
-    .event-detail::-webkit-scrollbar{
-        display:none;
-    }
-    .time-text{
-        margin: 20px auto 0 auto;
-    }
-    .event-mobile{
-        display: none;
-    }
-    .event-desktop{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        h3{
-            margin-left: 1em;
-        }
-    }
-    .event-detail{
-        grid-column: 5/ span 7;
-        grid-row: 4/ span 3;
-        margin: 0;
-        overflow-y: scroll;
-        -ms-overflow-style: none;
-        max-height: 100%;
-        box-shadow: 0px 3px 6px rgba(0,0,0,0.16);
-    }
+  }
+
+  .event-detail {
+    grid-column: 5/ span 7;
+    grid-row: 4/ span 3;
+    margin: 0;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    max-height: 100%;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 
 //mobile
 @media only screen and (max-width: 769px) {
-    .time-text{
-        margin: auto;
-    }
-    .red-arrow{
-        width: 10%;
-        height: 100%;
-        background-color: $red;
-        display: flex;
-        align-items: center;
-        img{
-            margin: 0 auto;
-        }
-    }
-    .event-desktop{
-        display: none;
-    }
+  .time-text {
+    margin: auto;
+  }
 
-    .event-detail{
-        display: none;
+  .red-arrow {
+    width: 10%;
+    height: 100%;
+    background-color: $red;
+    display: flex;
+    align-items: center;
+
+    img {
+      margin: 0 auto;
     }
+  }
+
+  .event-desktop {
+    display: none;
+  }
+
+  .event-detail {
+    display: none;
+  }
 }
