--- a/src/app/components/livestream/livechat/livechat.component.scss
+++ b/src/app/components/livestream/livechat/livechat.component.scss
@@ -1,17 +1,27 @@
 @import '~src/styles.scss';
 //Kleuren balkjes functies
-.docent, .student{
+.docent, .student, .bedrijf, .alumni{
   padding-left: 0.5em;
 }
+
 .docent{
   border-left: 5px solid $pink;
 }
+
 .student{
   border-left: 5px solid $blue;
 }
+
 .alumni{
-  border-left: 5px solid $blue;
+  border-left: 5px solid $red;
 }
+
+.bedrijf{
+  border-left: 5px solid $green;
+}
+
+
+
 
 
 
