--- a/src/app/components/desktopevent/desktopevent.component.html
+++ b/src/app/components/desktopevent/desktopevent.component.html
@@ -1,6 +1,6 @@
 <div *ngFor='let event of timeTable' id="desktop-event-{{event['name']}}" class="desktop-event">
 
-  <app-header back="true" title="{{event['name']}}"></app-header>
+  <!-- <app-header back="true" title="{{event['name']}}"></app-header> -->
 
   <div class="red-square">
     <img [src]="event['icon']" [alt]="event['name']" id='eventIcon'>
