--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -1,7 +1,7 @@
 <app-header class="yellow" title="Help Center"></app-header>
 <app-notification [notif]=room></app-notification>
 <div class="container-grid">
-<div class="pagina">
+<div class="pagina custom-scroll">
 <ol class="scrollable-content">
     <li><h3 class="subtititle">Wat is de final show?</h3>
         <p>De Final Show is een evenement waar de studenten van de Erasmushogeschool Brussel in de spotlight worden gezet. Hier kunnen ze tonen waar ze de voorbije maanden mee bezig zijn geweest.
