chat room basic css

--- a/src/app/components/inbox/inbox.component.html
+++ b/src/app/components/inbox/inbox.component.html
@@ -1,16 +1,19 @@
 <ng-container *ngIf="auth.user$ | async as user">
-<div class="inbox-container">
-  <div class="conversations" *ngFor="let chats of myChats" (click)='goToChat(chats)'>
-    <div *ngIf="chats.messages.length" class="conversation">
-      <img [src]="'assets/man.svg'" alt="">
-      <div class="namestatus">
-        <p>{{ chats.displayName | titlecase }}</p>
-        <p>
-          {{ chats.function}} Student
-        </p>
+  <div class="inbox-container">
+    <div class="conversations" *ngFor="let chats of myChats" (click)='goToChat(chats)'>
+      <div *ngIf="chats.messages.length" class="conversation">
+        <img [src]="'assets/man.svg'" alt="">
+        <div class="message-container">
+          <div class="namestatus">
+            <p>{{ chats.displayName | titlecase }}</p>
+            <p>
+              <!-- {{ chats.function}} Student -->
+            </p>
+          </div>
+
+          <span class="last-message">negeer mij ni...</span>
+        </div>
       </div>
-      <span *ngIf="chats.seen" class="last-message">negeer mij ni...</span>
     </div>
   </div>
-</div>
 </ng-container>
