--- a/src/app/components/network/register/register.component.scss
+++ b/src/app/components/network/register/register.component.scss
@@ -134,3 +134,25 @@ input{
   width: 20px !important;
 }
 }
+
+#characters {
+  padding: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  img {
+  box-sizing: border-box;
+  padding: 1em;
+  width: 75px;
+  &:hover{
+    background-color: rgba(117, 117, 117, .5);
+  }
+  &:active {
+    background-color: $blue
+  }
+  }
+
+
+}
+
