--- a/src/app/components/timetable/timetable.component.scss
+++ b/src/app/components/timetable/timetable.component.scss
@@ -39,6 +39,10 @@ a {
   }
 }
 
+.currentActiveEvent{
+  background-color: $blue;
+}
+
 
 .time-text {
   width: 20%;
@@ -52,6 +56,7 @@ a {
 @media only screen and (min-width: 769px) {
   ul {
     grid-column: 2/ span 3;
+    scroll-behavior: smooth;
     grid-row: 4/ span 3;
     margin: 0;
     -ms-overflow-style: none;
