--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,6 +64,7 @@ font-size: 15px;
 .deleteWindow{
   position: absolute;
   padding: 10px 20px;
+  right: 0;
   background-color: #000000af;
   display: flex;
   border-radius: 5px;
