--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,7 +12,13 @@
           <h1>Final Show</h1>
           <p>{{title}}</p>
         </div>
-        <div class="profile">
+        <div class="profile" *ngIf="user" class="{{user['function']}}">
+          <div *ngIf="user['character']">
+            <img [src]="'assets/mannekes/' +user['character']+ '.png'" alt="">
+          </div>
+          <div *ngIf="!user['character']">
+            <img [src]="'assets/mannekes/' +user['character']+ '.png'" alt="">
+          </div>
         </div>
       </section>
     </div>
