--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -48,10 +48,29 @@
     margin-left: 1em;
     width: 40px;
     height: 40px;
-    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img{
+      width: 30px;
+    }
   }
 }
+.docent {
+  background:$pink;
+}
 
+.student {
+  background:$blue;
+}
+
+.alumni {
+  background:$red;
+}
+
+.bedrijf {
+  background:$green;
+}
 
 // header
 
