--- a/src/app/components/network/register/register.component.html
+++ b/src/app/components/network/register/register.component.html
@@ -7,15 +7,15 @@
   </div>
 </div> -->
 
-  <!-- {{ goToHome() }} -->
+<!-- {{ goToHome() }} -->
 <!-- </div> -->
 
 
-  <!-- <input placeholder="Username" type='text' #username>
+<!-- <input placeholder="Username" type='text' #username>
  <button class="button" (click)="auth.AnonymousSignIn(username.value)">Login with Username</button>
   <span class="txt-light">or</span> -->
-  <app-header class="red"></app-header>
-  <section id="RegisterForm">
+<app-header class="red"></app-header>
+<section id="RegisterForm">
 
 
   <article class="container register-wrapper">
@@ -126,6 +126,169 @@
             <textarea placeholder="Bio" type='text' #bio formControlName="bio"></textarea>
           </div>
           <div class="input-form">
+            <label for="Character">Character</label>
+            <section class="flex row space-between">
+              <div (click)='  goleft()'>Go Left</div>
+              <div (click)='  goright()'>Go Right</div>
+            </section>
+
+            <section class="slider-wrapper">
+            <article id="characters"  [ngStyle]="{'width': 100*2 + '%', 'margin-left' : positionStyle}">
+
+
+              <div class="slide-content" >
+                <input type="radio" id="char2" name="char" hidden checked>
+                <label for="char2" (click)='setActiveCharacter("character2")'>
+                  <img src="assets/mannekes/character2.png" alt="" >
+                </label>
+              </div>
+
+              <div class="slide-content">
+                <input type="radio" id="char3" name="char" hidden>
+                <label for="char3" (click)='setActiveCharacter("character3")'>
+                  <img src="assets/mannekes/character3.png" alt="">
+                </label>
+                </div>
+
+              <div class="slide-content">
+                <input type="radio" id="char4" name="char" hidden>
+                <label for="char4" (click)='setActiveCharacter("character4")'>
+                  <img src="assets/mannekes/character4.png" alt="">
+                </label>
+                </div>
+
+              <div class="slide-content">
+                <input type="radio" id="char5" name="char" hidden>
+                <label for="char5" (click)='setActiveCharacter("character5")'>
+                  <img src="assets/mannekes/character5.png" alt="">
+                </label>
+                </div>
+
+              <div class="slide-content">
+                <input type="radio" id="char6" name="char" hidden>
+                <label for="char6" (click)='setActiveCharacter("character6")'>
+                  <img src="assets/mannekes/character6.png" alt="">
+                </label>
+                </div>
+
+              <div class="slide-content">
+                <input type="radio" id="char7" name="char" hidden>
+                <label for="char7" (click)='setActiveCharacter("character7")'>
+                  <img src="assets/mannekes/character7.png" alt="">
+                </label>
+                </div>
+
+              <div class="slide-content">
+                <input type="radio" id="char8" name="char" hidden>
+                <label for="char8" (click)='setActiveCharacter("character8")'>
+                  <img src="assets/mannekes/character8.png" alt="">
+                </label>
+                </div>
+
+              <div class="slide-content">
+                <input type="radio" id="char9" name="char" hidden>
+                <label for="char9" (click)='setActiveCharacter("character9")'>
+                  <img src="assets/mannekes/character9-f.png" alt="">
+                </label>
+                </div>
+
+              <div class="slide-content">
+                <input type="radio" id="char10" name="char" hidden>
+                <label for="char10" (click)='setActiveCharacter("character10-f")'>
+                  <img src="assets/mannekes/character10-f.png" alt="">
+                </label>
+                </div>
+
+              <div class="slide-content">
+                <input type="radio" id="char11" name="char" hidden checked>
+                <label for="char11" (click)='setActiveCharacter("character11-f")'>
+                  <img src="assets/mannekes/character11-f.png" alt="">
+                </label>
+                </div>
+
+              <div class="slide-content">
+                <input type="radio" id="char12" name="char" hidden>
+                <label for="char12" (click)='setActiveCharacter("character12-f")'>
+                  <img src="assets/mannekes/character12-f.png" alt="">
+                </label>
+                </div>
+
+              <div class="slide-content">
+                <input type="radio" id="char13" name="char" hidden>
+                <label for="char13" (click)='setActiveCharacter("character13-f")'>
+                  <img src="assets/mannekes/character13-f.png" alt="">
+                </label>
+                </div>
+
+              <div class="slide-content">
+                <input type="radio" id="char14" name="char" hidden>
+                <label for="char14" (click)='setActiveCharacter("character14-f")'>
+                  <img src="assets/mannekes/character14-f.png" alt="">
+                </label>
+                </div>
+
+
+              <div class="slide-content">
+                <input type="radio" id="char15" name="char" hidden>
+                <label for="char15" (click)='setActiveCharacter("character15-f")'>
+                  <img src="assets/mannekes/character15-f.png" alt="">
+                </label>
+                </div>
+
+              <div class="slide-content">
+                <input type="radio" id="char16" name="char" hidden>
+                <label for="char16" (click)='setActiveCharacter("character16-f")'>
+                  <img src="assets/mannekes/character16-f.png" alt="">
+                </label>
+                </div>
+
+              <div class="slide-content">
+                <input type="radio" id="char17" name="char" hidden>
+                <label for="char17" (click)='setActiveCharacter("character17-f")'>
+                  <img src="assets/mannekes/character17-f.png" alt="">
+                </label>
+              </div>
+
+              <div class="slide-content">
+                <input type="radio" id="char18" name="char" hidden>
+                <label for="char18" (click)='setActiveCharacter("character18-f")'>
+                  <img src="assets/mannekes/character18-f.png" alt="">
+                </label>
+              </div>
+
+              <div class="slide-content">
+                <input type="radio" id="char19" name="char" hidden>
+                <label for="char19" (click)='setActiveCharacter("dino1")'>
+                  <img src="assets/mannekes/dino1.png" alt="">
+                </label>
+              </div>
+
+              <div class="slide-content">
+                <input type="radio" id="char20" name="char" hidden>
+                <label for="char20" (click)='setActiveCharacter("dino2")'>
+                  <img src="assets/mannekes/dino2.png" alt="">
+                </label>
+              </div>
+
+              <div class="slide-content">
+                <input type="radio" id="char21" name="char" hidden>
+                <label for="char21" (click)='setActiveCharacter("robot1")'>
+                  <img src="assets/mannekes/robot1.png" alt="">
+                </label>
+              </div>
+            </article>
+          </section>
+
+
+
+
+
+
+
+
+
+
+          <div class="input-form">
             <label for="gdpr">We hebben nog je toestemming nodig om je een e-mail te mogen sturen:</label>
             <div id="ja">
               <input type="radio" name="gdpr" value='ja' #gdpr formControlName='gdpr'>
@@ -138,22 +301,7 @@
             <div *ngIf="registerGoogleForm.get('gdpr').hasError('required') && googleform.submitted"
               class='alert alert-danger'>Kies één van de bovenstaande keuzes.</div>
           </div>
-            <article id="characters">
-              <input type="radio">
-              <label for="">
-              <img src="assets/mannekes/character2.png" alt="">
-              </label>
-              <input type="radio">
-              <img src="assets/mannekes/character3.png" alt="">
-              <img src="assets/mannekes/character4.png" alt="">
-              <img src="assets/mannekes/character5.png" alt="">
-              <img src="assets/mannekes/character6.png" alt="">
-              <img src="assets/mannekes/character7.png" alt="">
-              <img src="assets/mannekes/character8.png" alt="">
-              <img src="assets/mannekes/character8.png" alt="">
-              <img src="assets/mannekes/character9.png" alt="">
-              <img src="assets/mannekes/character10.png" alt="">
-            </article>
+
           <button class="google-btn active">
             <div class="google-icon-wrapper">
               <img class="google-icon-svg"
@@ -161,13 +309,14 @@
             </div>
             LOG IN MET GOOGLE
           </button>
+          </div>
         </form>
         <button class="submit" (click)=ToggleForm()>REGISTREER MET EMAIL</button>
       </section>
     </article>
     <p>Al een account?</p>
     <button *ngIf="id === 'livestream'" [routerLink]="['/login',id]" type="button" class="txt-light">LOGIN</button>
-    <button *ngIf="id !== 'livestream'"[routerLink]="['/login']" type="button" class="txt-light">LOGIN</button>
+    <button *ngIf="id !== 'livestream'" [routerLink]="['/login']" type="button" class="txt-light">LOGIN</button>
   </article>
 
 </section>
