--- a/src/app/components/roomnav/roomnav.component.html
+++ b/src/app/components/roomnav/roomnav.component.html
@@ -1,10 +1,12 @@
 <!-- <app-header></app-header> -->
-<div #slidercontainer id="slidercontainer" class="slidercontainer">
+<div #slidercontainer id="slidercontainer" class="slidercontainer" (scroll)="changeOverlap()">
   <div id="rooms" [ngStyle]="{'width': 100*(rooms.length) + '%'}">
+    <!-- [@scroll]="returnState(room.name)" -->
     <div class="room" *ngFor="let room of rooms; let i=index">
       <h2 class="page-title">{{room.name}}</h2>
-      <img [src]="'assets/images/' + room.image" [alt]="room.name">
+      <img [src]="'assets/images/' + room.image" [alt]="room.name" id="{{i}}">
       <a (click)="rememberScrollPosition()" [routerLink]="room.link" class="button">Betreed kamer</a>
     </div>
   </div>
 </div>
+
