--- a/src/app/components/network/chat/chat.component.html
+++ b/src/app/components/network/chat/chat.component.html
@@ -1,4 +1,4 @@
-<app-header class="yellow" back='true'></app-header>
+<app-header class="red" back='true'></app-header>
 
 <ng-container *ngIf="chat$ | async as chat">
   <ng-container *ngIf=" auth.user$ | async as user">
