--- a/src/app/components/network/login/login.component.scss
+++ b/src/app/components/network/login/login.component.scss
@@ -111,7 +111,15 @@ align-items: center;
   user-select: none
 }
 
+//desktop
+@media only screen and (min-width: 769px) {
+  .login-wrapper {
+      grid-column: 9/ span 3;
+      grid-row: 4/ span 3;
+      margin: 0;
+  }
 
+}
 
 
 
