--- a/src/app/components/network/room/room.component.html
+++ b/src/app/components/network/room/room.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="chat$ | async as chat">
   <ng-container *ngIf=" auth.user$ | async as user">
-
-    <app-header class="yellow" back='true' title="{{chat.roomName}}"></app-header>
+    <div class="container-grid">
+    <app-header class="red" back='true' title="{{chat.roomName}}"></app-header>
 
     <!-- <div class="top">
       <p><a class="tag" routerLink="/network">Back</a></p>
@@ -141,5 +141,6 @@
       </article>
 
     </article>
+  </div>
   </ng-container>
 </ng-container>
