--- a/src/app/components/network/room/room.component.scss
+++ b/src/app/components/network/room/room.component.scss
@@ -194,3 +194,13 @@
     align-items: center;
   }
 }
+
+
+//desktop
+@media only screen and (min-width: 769px) {
+  .container {
+    grid-column: 9 / span 3;
+    grid-row: 4/ span 3;
+    box-shadow:  3px 6px rgba(0, 0, 0, 0.09);
+  }
+}
