--- a/src/app/components/roomnav/roomnav.component.scss
+++ b/src/app/components/roomnav/roomnav.component.scss
@@ -7,7 +7,6 @@
   }
 
   #rooms {
-    width: 100%;
     height: 100vh;
     display: flex;
     justify-content: flex-start;
@@ -23,15 +22,17 @@
       justify-content: space-between;
       align-items: center;
       flex-direction: column;
-
+      position: relative;
       h2 {
         text-transform: uppercase;
         font-size: 1.8em;
       }
 
       img {
-        width: 200px;
+        width: 70%;
         object-fit: contain;
+        position: relative;
       }
     }
   }
+
