--- a/src/app/components/network/login/login.component.html
+++ b/src/app/components/network/login/login.component.html
@@ -1,5 +1,5 @@
 
-<section id='login container-grid'>
+<section id='login' class ='container-grid'>
   <app-header class="red"></app-header>
   <article class="container login-wrapper">
     <h2>Je bent nog niet ingelogd.</h2>
