--- a/src/app/components/network/login/login.component.scss
+++ b/src/app/components/network/login/login.component.scss
@@ -3,12 +3,12 @@
   width: 100%;
 
   .login-wrapper {
-    margin-top: 100px;
+    // margin-top: 100px;
 
 
     h2 {
       text-align: left;
-      margin: 1em 0;
+      // margin: 1em 0;
       font-size: 20px;
     }
 
@@ -114,11 +114,31 @@ align-items: center;
 //desktop
 @media only screen and (min-width: 769px) {
   .login-wrapper {
-      grid-column: 9/ span 3;
+      grid-column: 8/ span 4;
       grid-row: 4/ span 3;
       margin: 0;
+      padding: 1em;
+      box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.09);
+      background: #fff;
+      overflow: hidden;
+      overflow: Scroll;
+      -ms-overflow-style: none;
+  }
+  .login-wrapper::-webkit-scrollbar {
+    display: none;
   }
 
+}
+
+//mobile
+@media only screen and (max-width: 769px) {
+  .login-wrapper {
+    margin-top: 100px;
+
+      h2{
+      margin: 1em 0;
+    }
+  }
 }
 
 
