--- a/src/app/components/network/register/register.component.html
+++ b/src/app/components/network/register/register.component.html
@@ -15,7 +15,7 @@
  <button class="button" (click)="auth.AnonymousSignIn(username.value)">Login with Username</button>
   <span class="txt-light">or</span> -->
 <app-header class="red"></app-header>
-<section id="RegisterForm">
+<section id="RegisterForm" class="container-grid">
 
 
   <article class="container register-wrapper">
