--- a/src/app/components/network/register/register.component.scss
+++ b/src/app/components/network/register/register.component.scss
@@ -2,7 +2,7 @@
 
 #RegisterForm {
   text-align: left;
-  margin-top: 100px;
+  // margin-top: 100px;
 
   .google {
     button {
@@ -56,7 +56,7 @@
   width: 100%;
 
   .register-wrapper {
-    margin-top: 100px;
+    // margin-top: 100px;
     text-align: left;
 
     h2 {
@@ -77,7 +77,7 @@
 
 
 button.active {
-  border: 1px solid #F9D48A;
+  border: 1px solid $red;
 }
 
 button {
@@ -188,5 +188,34 @@ button.google-btn {
           width: 100px;
                 }
       }
+  }
+}
+
+//desktop
+@media only screen and (min-width: 769px) {
+  .register-wrapper {
+      grid-column: 8/ span 4;
+      grid-row: 4/ span 3;
+      margin: 0;
+      padding: 1em;
+      box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.09);
+      background: #fff;
+      overflow: hidden;
+      overflow: Scroll;
+      -ms-overflow-style: none;
+  }
+  .register-wrapper::-webkit-scrollbar {
+    display: none;
+  }
+
+}
+
+//mobile
+@media only screen and (max-width: 768px){
+  #RegisterForm {
+    margin-top: 100px;
+  }
+  .register-wrapper{
+    margin-top: 100px;
   }
 }
