--- a/src/app/components/network/room/room.component.scss
+++ b/src/app/components/network/room/room.component.scss
@@ -199,8 +199,8 @@
 //desktop
 @media only screen and (min-width: 769px) {
   .container {
-    grid-column: 9 / span 3;
+    grid-column: 8 / span 4;
     grid-row: 4/ span 3;
-    box-shadow:  3px 6px rgba(0, 0, 0, 0.09);
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.09);
   }
 }
