--- a/src/app/components/faq/faq.component.scss
+++ b/src/app/components/faq/faq.component.scss
@@ -37,7 +37,7 @@
 
 @media only screen and (min-width: 769px) {
   .container-grid {
-    background-image: url("../../../assets/images/onthaal.png");
+    background-image: url("../../../assets/images/onthaal2.png");
     background-size: cover;
   }
 
@@ -53,6 +53,7 @@
     max-height: 100%;
     padding: 0 1em 1em 4em;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.09);
+    background-color: #fff;
 
     .scrollable-content {
 
