--- a/src/app/components/timetable/timetable.component.scss
+++ b/src/app/components/timetable/timetable.component.scss
@@ -98,6 +98,7 @@ a {
     -ms-overflow-style: none;
     max-height: 100%;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+    background-color: #fff;
   }
 
   .selectedEvent {
@@ -105,7 +106,7 @@ a {
   }
 
   .container-grid {
-    background-image: url("../../../assets/images/fablabCloseUp.png");
+    background-image: url("../../../assets/images/fablabCloseUp3.png");
     background-size: cover;
   }
 
