--- a/src/app/components/network/login/login.component.html
+++ b/src/app/components/network/login/login.component.html
@@ -27,7 +27,7 @@
                 </div>
                 <div >{{errorMessages}}</div>
                 <div class="input-form flex column">
-                  <button class="submit active" type="submit">LOGIN</button>
+                  <button class="submit active" type="submit">LOG IN</button>
                 </div>
               </section>
             </form>
@@ -45,7 +45,7 @@
         </article>
 
     <p>Nog geen account?</p>
-    <button *ngIf="id === 'livestream'" [routerLink]="['/register',id]" type="button" class="txt-light">REGISTREER</button>
-    <button *ngIf="id !== 'livestream'"[routerLink]="['/register']" type="button" class="txt-light">REGISTREER</button>
+    <button *ngIf="id === 'livestream'" [routerLink]="['/register',id]" type="button" class="">REGISTREER</button>
+    <button *ngIf="id !== 'livestream'"[routerLink]="['/register']" type="button" class="">REGISTREER</button>
   </article>
 </section>
