Individual chat: Reworked delete systeem

--- a/src/app/components/network/chat/chat.component.html
+++ b/src/app/components/network/chat/chat.component.html
@@ -43,14 +43,14 @@
                     <span class="tag is-dark txt-right">{{ msg.user?.displayName || msg.user?.uid }}</span>
                   </div>
                   <p *ngIf="!mobile">{{ msg.content }}</p>
-                  <p *ngIf="mobile" appHoldable (holdTime)="holdHandler($event)" class="holdable">{{ msg.content }}</p>
+                  <p *ngIf="mobile" appHoldable (holdTime)="holdHandler($event, chat, msg, i)" class="holdable">{{ msg.content }}</p>
                   <img src="assets/eye.svg" *ngIf="msg.seen" class="seen">
                 </div>
                 <!-- <div class="user flex column">
                       <img [src]="'assets/man.svg'" width="50px">
                     </div> -->
               </article>
-              <img src="assets/dots.svg" class="deleteDots" (click)="toggleDeleteWindow(chat.messages, msg)">
+              <img *ngIf="!mobile" src="assets/dots.svg" class="deleteDots" (click)="toggleDeleteWindow(chat.messages, msg)">
               <div *ngIf="msg.deleteWindow" class="deleteWindow" (click)="clickedDelete(chat, msg, i)">
                   <img src="assets/delete.svg">
                   <span id="deleteText">Verwijder</span>
@@ -147,8 +147,23 @@
                 src="assets/images/send.svg"></button>
           </section>
         </div>
+
+        <div class="mobileDeleteWindow" *ngIf="showMobileDeleteWindow">
+          <div class="mobileDelete" (click)="deleteMessage()">
+            <img src="assets/delete.svg">
+            <p>Verwijder</p>
+          </div>
+          <div class="line">
+          </div>
+          <div class="mobileCancel" (click)="cancelDelete()">
+            <img src="assets/close.svg">
+            <p>Annuleer</p>
+          </div>
+        </div>
+
       </article>
 
     </article>
+
   </ng-container>
 </ng-container>
