--- a/src/app/components/desktopevent/desktopevent.component.html
+++ b/src/app/components/desktopevent/desktopevent.component.html
@@ -3,6 +3,7 @@
   <!-- <app-header back="true" title="{{event['name']}}"></app-header> -->
 
   <div class="red-square">
+    <img [src]="event['image']" [alt]="event['name']" id='eventImage'>
     <img [src]="event['icon']" [alt]="event['name']" id='eventIcon'>
   </div>
   <div class="tekst-event">
