CUTE CAT GIF - MOST IMPORTANT COMMIT

--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -18,5 +18,7 @@
         <p>Contacteer een moderator in de netwerk kamer. Zij zullen u met veel plezier verder helpen.</p></li>
 </ol>
 </div>
-<div id="filler"></div>
+<div id="filler">
+  <img src="../../../assets/faq.gif" alt="">
+</div>
 </div>
