--- a/src/app/components/faq/faq.component.scss
+++ b/src/app/components/faq/faq.component.scss
@@ -94,4 +94,10 @@
     overflow: hidden;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.09);
   }
+
+  #filler img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
