--- a/src/app/components/desktopevent/desktopevent.component.scss
+++ b/src/app/components/desktopevent/desktopevent.component.scss
@@ -12,8 +12,21 @@
     display: flex;
     align-content: space-around;
     justify-content: center;
+    position: relative;
+    margin-bottom: 3%;
     img{
         max-height: 80%;
+    }
+    .eventIcon{
+        position: absolute;
+        right: -4vw;
+        bottom: -4vh;
+    }
+    .eventImage{
+        margin-top: auto;
+        margin-bottom: auto;
+        width: 80%;
+        object-fit: cover;
     }
 }
 
